--- a/main.css
+++ b/main.css
@@ -143,7 +143,7 @@ text-align: center;
 footer{
   background-color: #008F8C;
   text-align: center;
-  padding: 10px;
+  padding: 10px 0px;
 }
 footer p{
   color: white;
