--- a/main.css
+++ b/main.css
@@ -26,6 +26,10 @@ header .container{
   
 }
 header{
+  position: sticky;
+  top: 0;
+  left: 0;
+  z-index: 1;
   background-color: #008F8C;
   padding:10px 0;
 }
